Fixes youtube video on IE 8, SSL problems. Sets default to SSL on prod.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -325,6 +325,7 @@ $logo-scaling: 0.7;
 
         iframe {
             @include transform(scale(0, 0));
+            @include opacity(0);
         }
     };
 
@@ -335,6 +336,7 @@ $logo-scaling: 0.7;
 
         iframe {
             @include transform(scale(1, 1));
+            @include opacity(1);
         }
     };
 }
